--- a/projet-trombi/monsite/monsite/templates/monsite/ajout.html
+++ b/projet-trombi/monsite/monsite/templates/monsite/ajout.html
@@ -1,8 +1,6 @@
 <!-- On utilise la base extends pour étendre le fichier 'monsite/base.html' -->
 {% extends 'monsite/base.html' %}
 
-{% block content %}
+{% block title %} Ajout {% endblock %}
 
-<h1>Page d'ajout d'ami(e)s</h1>
-
-{% endblock %}
+{% block content %} Page d'ajout d'ami(e)s {% endblock %}
