--- a/projet-trombi/monsite/monsite/templates/monsite/connexion.html
+++ b/projet-trombi/monsite/monsite/templates/monsite/connexion.html
@@ -1,8 +1,23 @@
 <!-- On utilise la base extends pour étendre le fichier 'monsite/base.html' -->
 {% extends 'monsite/base.html' %}
 
+{% block title %} Connexion {% endblock %}
+
+{% block bodyId %} loginPage {% endblock %}
+
 {% block content %}
-
-<h1>Page de connexion</h1>
-
+<form action="???" method="get">
+ <p>
+ <label for="email">Courriel :</label>
+ <input name="email" id="email" size="30" type="email" />
+ </p>
+ <p>
+ <label for="password">Mot de passe :</label>
+ <input name="password" id="password" size="30" type="password" />
+ </p>
+ <p>
+ <input type="submit" value="Se connecter"/>
+ <a href=" ">Créer un compte</a>
+ </p>
+</form>
 {% endblock %}
