--- a/projet-trombi/monsite/monsite/templates/monsite/index.html
+++ b/projet-trombi/monsite/monsite/templates/monsite/index.html
@@ -1,8 +1,7 @@
 <!-- On utilise la base extends pour étendre le fichier 'monsite/base.html' -->
 {% extends 'monsite/base.html' %}
 
-{% block content %}
+{% block title %} Index {% endblock %}
 
-<h1>Page d'index</h1>
+{% block content %} Bienvenue sur Trombinoscoop ! {% endblock %}
 
-{% endblock %}
