--- a/projet-trombi/monsite/monsite/templates/monsite/modification.html
+++ b/projet-trombi/monsite/monsite/templates/monsite/modification.html
@@ -1,8 +1,6 @@
 <!-- On utilise la base extends pour étendre le fichier 'monsite/base.html' -->
 {% extends 'monsite/base.html' %}
 
-{% block content %}
+{% block title %} Modification {% endblock %}
 
-<h1>Page de modification</h1>
-
-{% endblock %}
+{% block content %}  {% endblock %}
