--- a/projet-trombi/monsite/monsite/templates/monsite/profil.html
+++ b/projet-trombi/monsite/monsite/templates/monsite/profil.html
@@ -1,8 +1,6 @@
 <!-- On utilise la base extends pour étendre le fichier 'monsite/base.html' -->
 {% extends 'monsite/base.html' %}
 
-{% block content %}
+{% block title %} Profil {% endblock %}
 
-<h1>Page profil</h1>
-
-{% endblock %}
+{% block content %} {% endblock %}
