--- a/projet-trombi/monsite/monsite/templates/monsite/base.html
+++ b/projet-trombi/monsite/monsite/templates/monsite/base.html
@@ -4,10 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>{% block title %} {% endblock %}</title>
+    <title>Trombinoscoop – {% block title %}Bienvenue{% endblock %}</title>
 </head>
-<body>
-{% block content %}
-{% endblock %}
+<body id="{% block bodyId %} genericPage {% endblock %}">
+    <!-- --------- En-tête -------- -->
+    <header>
+        {% block headerContent %} {% endblock %}
+    </header>
+    <!-- --------- Section -------- -->
+    <section id="content">
+        {% block content %}{% endblock %}
+    </section>
+
 </body>
 </html>
