--- a/projet-trombi/monsite/monsite/templates/monsite/ajout.html
+++ b/projet-trombi/monsite/monsite/templates/monsite/ajout.html
@@ -1,6 +1,6 @@
 <!-- On utilise la base extends pour étendre le fichier 'monsite/base.html' -->
 {% extends 'monsite/base.html' %}
-
+     <!-- ------- Balise <title> ------- -->
 {% block title %} Ajout {% endblock %}
-
+       <!-- ------- Balise <body> ------- -->
 {% block content %} Page d'ajout d'ami(e)s {% endblock %}
