--- a/projet-trombi/monsite/monsite/templates/monsite/base.html
+++ b/projet-trombi/monsite/monsite/templates/monsite/base.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>Trombinoscoop – {% block title %}Bienvenue{% endblock %}</title>
+            <!-- On insère les données entre les bloc -->
+    <title>Trombinoscoop – {% block title %} Bienvenue {% endblock %}</title>
 </head>
 <body id="{% block bodyId %} genericPage {% endblock %}">
     <!-- --------- En-tête -------- -->
