--- a/projet-trombi/monsite/monsite/templates/monsite/index.html
+++ b/projet-trombi/monsite/monsite/templates/monsite/index.html
@@ -1,7 +1,7 @@
 <!-- On utilise la base extends pour étendre le fichier 'monsite/base.html' -->
 {% extends 'monsite/base.html' %}
-
+    <!-- ------- Balise <title> ------- -->
 {% block title %} Index {% endblock %}
-
+     <!-- ------- Balise <body> ------- -->
 {% block content %} Bienvenue sur Trombinoscoop ! {% endblock %}
 
