--- a/projet-trombi/monsite/monsite/templates/monsite/modification.html
+++ b/projet-trombi/monsite/monsite/templates/monsite/modification.html
@@ -1,6 +1,6 @@
 <!-- On utilise la base extends pour étendre le fichier 'monsite/base.html' -->
 {% extends 'monsite/base.html' %}
-
+     <!-- ------- Balise <title> ------- -->
 {% block title %} Modification {% endblock %}
-
+       <!-- ------- Balise <body> ------- -->
 {% block content %}  {% endblock %}
