--- a/projet-trombi/monsite/monsite/templates/monsite/profil.html
+++ b/projet-trombi/monsite/monsite/templates/monsite/profil.html
@@ -3,4 +3,23 @@
 
 {% block title %} Profil {% endblock %}
 
-{% block content %} {% endblock %}
+    <!-- ------- Balise <body> ------- -->
+{% block title %} Profil utilisateur {% endblock %}
+
+{% block content %}
+     <h>Création de compte</h>
+	<form action="inscription" method="GET">
+		<!-- mesure de sécurité -->
+		{% csrf_token %}
+		<!-- gabarit du message d'erreurs éventuelles -->
+
+		{% if error %}
+			<!-- message d'erreurs -->
+			<p>{{ error }}</p>
+		{% endif %}
+
+		{{form.as_p}}
+ 			<input type="submit" value="S'inscrire"/>
+ 		</p>
+	</form>
+{% endblock %}
