--- a/StageDjango/website/webapp/templates/webapp/accueil.html
+++ b/StageDjango/website/webapp/templates/webapp/accueil.html
@@ -8,6 +8,7 @@
     <!-- ----------- NOM DE L'UTILISATEUR ------------- -->
     <p id="nom">{{ utilisateur_connecte.nom }} {{ logged_user.last_name }}</p>
 
+    <h1> Accueil </h1>
     <!-- ----------- LIENS PROFIL ------------- -->
     <p id="lien-profil">
         <a href="#" class="bouton-lien"> Voir le profil</a>
