--- a/PROJET-DJANGO/website/webapp/templates/webapp/register.html
+++ b/PROJET-DJANGO/website/webapp/templates/webapp/register.html
@@ -5,7 +5,7 @@
 {% block bodyId %}PageIncription{% endblock %}
 
 {% block content %}
-	<form action=" " method="POST">
+	<form method="POST">
 		<!-- mesure de sécurité -->
 		{% csrf_token %}
 		<h1> Inscription </h1>
