--- a/PROJET-DJANGO/website/webapp/templates/webapp/base.html
+++ b/PROJET-DJANGO/website/webapp/templates/webapp/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <title>Trombinoscoop – {% block title %}  {% endblock %}</title>
+        <title>Django – {% block title %}  {% endblock %}</title>
     </head>
     <!-- -----------BODY------------- -->
     <body  id="{% block bodyId %}genericPage{% endblock %}">
