--- a/PROJET-DJANGO/website/webapp/templates/webapp/bienvenue.html
+++ b/PROJET-DJANGO/website/webapp/templates/webapp/bienvenue.html
@@ -8,10 +8,15 @@
     <!-- ----------- NOM DE L'UTILISATEUR ------------- -->
     <p id="nom">{{ User.last_name }} {{ logged_user.last_name }}</p>
 
-    <h1> Profil </h1>
     <!-- ----------- LIENS PROFIL ------------- -->
     <p id="lien-profil">
-        <a href="#" class="bouton-lien"> Voir le profil</a>
-        <a href="#" class="bouton-lien"> Modifier le profil</a>
+        <a href="profile?User={{ logged_user.id }}" class="bouton-lien"> Voir le profil</a>
+        <a href="???" class="bouton-lien"> Modifier le profil</a>
     </p>
+{% endblock %}
+
+{% block content %}
+
+		<h1> Bienvenue </h1>
+
 {% endblock %}
