--- a/ESSAI-DJANGO/website/webapp/templates/webapp/deconnexion.html
+++ b/ESSAI-DJANGO/website/webapp/templates/webapp/deconnexion.html
@@ -5,7 +5,7 @@
 {% block bodyId %}loginPage{% endblock %}
 
 {% block content %}
-	<form action=" " method="POST">
+	<form method="POST">
 
 		{% csrf_token %} <!-- MESURE DE SÉCURITÉ -->
 
