--- a/ESSAI-DJANGO/website/webapp/templates/webapp/inscription.html
+++ b/ESSAI-DJANGO/website/webapp/templates/webapp/inscription.html
@@ -5,7 +5,7 @@
 {% block bodyId %}registerPage{% endblock %}
 
 {% block content %}
-	<form action="register" method="POST">
+	<form method="POST">
 
 		{% csrf_token %} <!-- MESURE DE SÉCURITÉ -->
 
