--- a/ESSAI-DJANGO/website/webapp/templates/webapp/base.html
+++ b/ESSAI-DJANGO/website/webapp/templates/webapp/base.html
@@ -1,12 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <title>Django – {% block title %}  {% endblock %}</title>
     </head>
     <!-- -----------BODY------------- -->
-    <body  id="{% block bodyId %}genericPage{% endblock %}">
+    <body  id="{% block bodyId %}PageGenerique{% endblock %}">
         <!-- ----------- EN-TÊTE ------------- -->
         <header>
             {% block headerContent %}
@@ -14,8 +16,10 @@
             {% endblock %}
         </header>
         <!-- ----------- SECTION ------------- -->
-        <section id="content">
-            {% block content %} {% endblock %}
+        <section id="contenu">
+            {% block content %}
+
+            {% endblock %}
         </section>
     </body>
 </html>
