--- a/ESSAI-DJANGO/website/webapp/templates/webapp/base.html
+++ b/ESSAI-DJANGO/website/webapp/templates/webapp/base.html
@@ -5,21 +5,17 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <title>Django – {% block title %}  {% endblock %}</title>
+        <title> Django – {% block title %} Bienvenue {% endblock %} </title>
     </head>
-    <!-- -----------BODY------------- -->
-    <body  id="{% block bodyId %}PageGenerique{% endblock %}">
+    <!-- -----------BODY avec un 'id' qui change en fonction des pages ------------- -->
+    <body  id="{% block bodyId %} genericPage {% endblock %}">
         <!-- ----------- EN-TÊTE ------------- -->
         <header>
-            {% block headerContent %}
-
-            {% endblock %}
+            {% block headerContent %} {% endblock %}
         </header>
         <!-- ----------- SECTION ------------- -->
-        <section id="contenu">
-            {% block content %}
-
-            {% endblock %}
+        <section id="content">
+            {% block content %} {% endblock %}
         </section>
     </body>
 </html>
