--- a/ESSAI-DJANGO/website/webapp/templates/webapp/profile_utilisateur.html
+++ b/ESSAI-DJANGO/website/webapp/templates/webapp/profile_utilisateur.html
@@ -8,7 +8,7 @@
 
 	<h1> Création du compte </h1>
 
-	<form action="inscription" method="POST">
+	<form  method="POST">
 
 		{% csrf_token %} <!-- MESURE DE SÉCURITÉ -->
 
