--- a/ESSAI-DJANGO/website/website/static/css/style.css
+++ b/ESSAI-DJANGO/website/website/static/css/style.css
@@ -222,3 +222,51 @@ form.inlineForm input[type='submit']
   margin: 0;
 }
 
+section#messageList ul
+{
+    margin: 20px 0 0 0;
+    list-style: none;
+    padding: 0;
+}
+
+section#messageList ul li
+{
+    margin-bottom: 10px;
+}
+
+section#messageList ul li p
+{
+    border:solid red;
+    margin: 8px 0 0 0;
+}
+
+body#welcomePage section#friendList
+{
+ position: absolute;
+ width: 180px;
+ right: 0;
+ padding: 10px;
+ background-color: #DCE0ED;
+}
+
+
+section#friendList p.title
+{
+ font-size: 22px;
+ color: #3b5998;
+ border-bottom: 1px solid #3b5998;
+ margin: 0 0 20px 0;
+}
+
+
+section#friendList ul
+{
+ margin: 20px 0 0 0;
+ list-style: none;
+ padding: 0;
+}
+
+section#friendList ul li
+{
+ margin: 0 0 5px 0;
+}
