--- a/ESSAI-DJANGO/website/webapp/templates/webapp/ajout_utilisateur.html
+++ b/ESSAI-DJANGO/website/webapp/templates/webapp/ajout_utilisateur.html
@@ -1,12 +1,13 @@
+
 {% extends "webapp/base.html" %}
 
-{% block title %} Suppression {% endblock %}
+{% block title %} Ajout d'un utilisateur {% endblock %}
 
-{% block bodyId %}userProfilePage{% endblock %}
+{% block bodyId %}addUserPage{% endblock %}
 
 {% block content %}
 
-	<h1> Suppression du compte </h1>
+	<h1> Ajout d'un utilisateur </h1>
 
 	<form  method="POST">
 
@@ -19,8 +20,7 @@
 		{{form.as_p}} <!-- FORMULAIRE -->
 
 		<p>
- 			<input type="submit" value="Supprimer"/>
- 			<a href=" "> Retour </a>
+ 			<input type="submit" value="Ajouter"/>
  		</p>
 	</form>
 {% endblock %}
