--- a/DJANGO-PREMIER/monsite/monappli/templates/monappli/base.html
+++ b/DJANGO-PREMIER/monsite/monappli/templates/monappli/base.html
@@ -11,14 +11,14 @@
     <body  id="{% block bodyId %} genericPage {% endblock %}">
 
         <header>
-            {% block contenu-header %}
+            {% block headerContent %}
 
 
             {% endblock %}
         </header>
 
-        <section id="contenu-section">
-            {% block contenu-section %}
+        <section id="content">
+            {% block content %}
 
 
             {% endblock %}
