--- a/DJANGO-PREMIER/monsite/monappli/templates/monappli/connexion.html
+++ b/DJANGO-PREMIER/monsite/monappli/templates/monappli/connexion.html
@@ -4,7 +4,9 @@
 
 {% block bodyId %} loginPage {% endblock %}
 
-{% block contenu-header %}
+{% block headerContent %}  {% endblock %}
+
+{% block content %}
 
 	<form  method="POST"> {% csrf_token %} <!-- MESURE DE SÉCURITÉ -->
 
